--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,14 @@
 
 # testing
 /coverage
+/certificates
 
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
