--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=8000
 ENVIRONMENT=dev
 PROTOCOL=https
+MONGODB_URI=mongodb+srv://tandin:Reskar@27@db.soqaf.mongodb.net/?retryWrites=true&w=majority
