--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
