--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "encrypted and Multi-authentication service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon ./index.js"
   },
-  "author": "Tandin Wangchen",
+  "author": "Tandin Wangchen, Nirmith Akash",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -20,6 +20,8 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "jest": "^29.2.2",
+    "supertest": "^6.3.1"
   }
 }
