Add protected route to the backend

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT=8000
 ENVIRONMENT=dev
 PROTOCOL=https
 MONGODB_URI=mongodb+srv://tandin:Reskar@27@db.soqaf.mongodb.net/?retryWrites=true&w=majority
+
+ACCESS_TOKEN_SECRET=9852791348
