--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.10.13",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
