--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.20",
+    "toobusy-js": "^0.5.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
