--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Tandin Wangchen, Nirmith Akash",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
